--- a/README
+++ b/README
@@ -8,6 +8,9 @@
 # ggd
 https://nl.wikipedia.org/wiki/GGD_Rotterdam-Rijnmond
 
+# xipe totec
+https://en.wikipedia.org/wiki/Xipe_Totec
+
 # fentanyl
 https://en.wikipedia.org/wiki/Fentanyl
 
