--- a/README
+++ b/README
@@ -20,6 +20,9 @@ https://en.wikipedia.org/wiki/Heroin
 # gaskamer
 https://nl.wikipedia.org/wiki/Gaskamer
 
+# mishandeling
+https://nl.wikipedia.org/wiki/Mishandeling
+
 # erasmusbrug
 https://nl.wikipedia.org/wiki/Erasmusbrug
 
