--- a/README
+++ b/README
@@ -20,6 +20,9 @@ https://en.wikipedia.org/wiki/Heroin
 # gaskamer
 https://nl.wikipedia.org/wiki/Gaskamer
 
+# cytokinestorm
+https://nl.wikipedia.org/wiki/Cytokinestorm
+
 # mishandeling
 https://nl.wikipedia.org/wiki/Mishandeling
 
