--- a/README
+++ b/README
@@ -11,20 +11,23 @@ https://nl.wikipedia.org/wiki/GGD_Rotterdam-Rijnmond
 # xipe totec
 https://en.wikipedia.org/wiki/Xipe_Totec
 
+# methadone
+https://en.wikipedia.org/wiki/Methadone
+
 # fentanyl
 https://en.wikipedia.org/wiki/Fentanyl
 
 # heroin
 https://en.wikipedia.org/wiki/Heroin
 
-# gaskamer
-https://nl.wikipedia.org/wiki/Gaskamer
-
 # cytokinestorm
 https://nl.wikipedia.org/wiki/Cytokinestorm
 
-# mishandeling
-https://nl.wikipedia.org/wiki/Mishandeling
+# gaskamer
+https://nl.wikipedia.org/wiki/Gaskamer
+
+# crimes against humanity
+https://en.wikipedia.org/wiki/Crimes_against_humanity
 
 # erasmusbrug
 https://nl.wikipedia.org/wiki/Erasmusbrug
