--- a/README
+++ b/README
@@ -26,6 +26,9 @@ https://nl.wikipedia.org/wiki/Cytokinestorm
 # gaskamer
 https://nl.wikipedia.org/wiki/Gaskamer
 
+# drug overdose
+https://en.wikipedia.org/wiki/Drug_overdose
+
 # crimes against humanity
 https://en.wikipedia.org/wiki/Crimes_against_humanity
 
